# bg_testtask

./: CMakeLists.txt  README.md  main.cpp  output.avi  output_final.avi  test_prj
